# spcy

./: .env.sample  Cargo.toml  Dockerfile  README.ja.md  README.md
.github/workflows/: release.yml
src/: main.rs  mp3.rs  spc.rs
