[package]
name = "spcy"
version = "0.1.0"
authors = ["naari3 <naari.named@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
infer = "0.3"
dotenv = "0.15.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
id666 = { git = "https://github.com/naari3/id666-rs-bind", rev = "dd97120" }
snes_spc = { git = "https://github.com/naari3/snes_spc-rs-bind", rev = "16c9b61" }
lame = { git = "https://github.com/naari3/lame-rs", rev = "da260d5" }
anyhow = "1.0"

[dependencies.serenity]
default-features = false
features = ["client", "gateway", "rustls_backend", "model"]
version = "0.10"
